--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+[tool.poetry]
+name = "streamlit_recev"
+version = "0.1.0"
+description = "A Streamlit app for receivables management"
+authors = ["Your Name <your.email@example.com>"]
+
 [build-system]
-requires = ["setuptools>=42", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
